	* fix recursion synchronizing compare set while adding curve to compare set
	* handle device base directory by interface method, default implementation, device specific implementation if required
	* enhance calculation of synched scale label 
	* Reduce DataExplorer startup duration
	* Ask user for confirmation prior to purging an object key
Device specific changes/fixes
	* HoTTAdapter* add file selection hint for *.bin;*.log 
	* S32 - fix factor to correct external temperatures
	* S32_2 - initial release for S32 as version 2 displaying all measurement values on a single time line
	* S32 - fix measurement synchronization references (need device XML replacement)
	* S32 - fix external temperature factor according customer feedback
	* Ultramat* single channel charger - fix possible NullPointerException
	* OpenTx-Telemetry - fix potential exception, add some more mapping parameter, enable visualization control and help
	* OpenTx-Telemetry - split log according time entries into separate record sets
	* Futaba-Telemetry - fix parsing exception "---", enable visualization control and help
	* Futaba-Telemetry - fix EOFException saving OSD with record set different real size
	* Hitec X1 Red - add initial support (alpha)

History analysis
	* Enhance UI
		>> Add support for triggered values (e.g. motor runtime height)
		>> Add refresh menu item and shortcut
		>> Add object key wizard (if accessing new directories) 
		>> Remove MessageBox "No log files"
		>> Fix importing from histo table with reversed x axis opens wrong file
		>> Fix InvalidPathException@_SupplementObjectDirs
		>> Fix wrong decimal places if switching from histo graphics to histo table
	* Remove searching in the current import path (is obsolete due to remote log file support)
	* Enhance performance
	 	>> Memory cache for aggregated histo data 
	 	>> Optimized directory scans for graphics refresh 
	 	>> Avoid multiple vault re-reading from the source log files
	 	>> Code optimizations to avoid materialization